# test-baum

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  baum.dockerfile  entrypoint.sh  pyproject.toml
app/: db.py  exeption.py  init_db.py  model.py  rabbit_client.py  router.py  schemas.py  utils.py
docker-compose/: app.yml  db.yml  rabbit.yml
