[tool.poetry]
name = "baum-test"
version = "0.1.0"
description = "Тестовое задание от BAUM Storage"
authors = ["Александр Костяков <79514164692@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
fastapi = "0.103.2"
uvicorn = "^0.24.0.post1"
sqlalchemy = "2.0.22"
pydantic = "^2.5.1"
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"
python-multipart = "^0.0.6"
pika = "^1.3.2"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
