[tool.poetry]
name = "baum-test"
version = "0.1.0"
description = "Тестовое задание от BAUM Storage"
authors = ["Александр Костяков <79514164692@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
fastapi = "0.103.2"
uvicorn = "^0.24.0.post1"
sqlalchemy = "2.0.22"
pydantic = "^2.5.1"
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"
python-multipart = "^0.0.6"
aio-pika = "^9.3.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 90
multi_line_output = 3
skip_gitignore = true
skip_glob = ["**/migrations/*", "**/settings/*"]
src_paths = ["backend"]

[tool.flake8]
max-line-length = 90
count = true
extend-ignore = ['E501', 'E203', 'W503']
exclude = [
    '.git',
    '__pycache__',
    'frontend',
    '.vscode',
    '*.egg',
    '.venv']